[package]
name = "chipATE"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
crossterm = "0.28.1"
env_logger = "0.11.8"
log = "0.4.27"
rand = "0.9.0"
ratatui = "0.29.0"
sdl2 = "0.37.0"
tokio = {version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
