[package]
name = "chipATE"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
crossterm = {version = "0.28.1", features = ["event-stream"]}
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.27"
rand = "0.9.0"
ratatui = "0.29.0"
sdl2 = "0.38.0"
tokio = {version = "1.44.1",   features = ["macros", "rt", "full"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
